--- a/index.html
+++ b/index.html
@@ -668,6 +668,7 @@
                     <h3>Свяжитесь с нами</h3>
                     <p><strong>Телефон:</strong> <a href="tel:+79190454240" style="color: #3498db;">8 (919) 045-42-40</a></p>
                     <p><strong>Email:</strong> <a href="mailto:ooosmoldial@mail.ru" style="color: #3498db;">ooosmoldial@mail.ru</a></p>
+                    <p><strong>Группа ВКонтакте:</strong> <a href="https://vk.com/ooosmoldial" style="color: #3498db;" target="_blank">vk.com/ooosmoldial</a></p>
                     <p><strong>Юридический адрес:</strong><br>
                     216740, Смоленская область,<br>
                     Руднянский район, п. Гольнки,<br>
